--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                             </li>
                         </ul>
                     </div>     
-                    <button type="submit" class="btn"> Enviar
+                    <button type="submit" class="btn"> <a> Enviar </a>
                     </button>
                     <p class="warnings" id="warnings"></p>
                 </form>
